--- a/notebook/HR.ipynb
+++ b/notebook/HR.ipynb
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4ec0c547",
    "metadata": {},
    "outputs": [
@@ -951,6 +951,7 @@
    "source": [
     "import scipy.stats as stats\n",
     "\n",
+    "# ANOVA\n",
     "anova_results = {}\n",
     "\n",
     "for var in ['Position', 'Department', 'Sex', 'Race']:\n",
